objects/ASI_CRM_CN_PROS_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chi_Name__c</fullName>
        <label>Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Eng_Name__c</fullName>
        <label>Eng Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_On_Off__c</fullName>
        <label>On/Off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PROS_Segmentation_Code__c</fullName>
        <label>PROS Segmentation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PROS Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chi_Name__c</columns>
        <columns>ASI_CRM_Eng_Name__c</columns>
        <columns>ASI_CRM_On_Off__c</columns>
        <columns>ASI_CRM_PROS_Segmentation_Code__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PROS Segmentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Segmentations</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Segmentation</fullName>
        <active>true</active>
        <label>CN Segmentation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>